# ineedempathy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  build.sh  design.md  loadtest.py  mypy.ini  newrelic.ini  notes.md  pyproject.toml  run.sh  server-setup.md  supervisord.conf  todo.md
.github/: workflows
.github/workflows/: continual_deploy.yml  main.yml  pull_request.yml  pull_request_link.yml  run_tests.yml
backend/: config.py  crud.py  database.py  deps.py  entrypoint.py  main.py  models.py  security.py  utils.py
backend/email-templates/: new_account.html  reset_password.html
backend/middleware/: __init__.py  connectionmanager.py  empathyeventmiddleware.py  empathymansion.py  sentry.py
backend/routers/: api.py
backend/schemas/: __init__.py  card.py  comment.py  guess.py  room.py  roominfo.py  scene.py  story.py  trip.py  user.py  userinfo.py
backend/static/: LICENSE
cards/: info-back.xcf  info-front.xcf
frontend/: .eslintcache  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  Routes.tsx  index.css  index.scss  index.tsx
migrations/: env.py
pyinfra/: README.md  droplet.py  pyproject.toml  setup-server.py
pyinfra/group_data/: all.py  production.py  staging.py
pyinfra/templates/: amjith_authorized_keys  baylee_authorized_keys  nginx_app.conf  supervisord.conf  wait-apt-get  web-runner_authorized_keys
script/: seed.py  seed.sh
tests/: test_api.py  test_connection_manager.py  test_room_info.py  test_user_info.py  unit_test.py
(+68 files in other folders)
